# spec-driven-ai-demo

./: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
.claude/skills/create-issue/: SKILL.md
.claude/skills/issue-draft/: SKILL.md
.claude/skills/plan/: SKILL.md
.claude/skills/resolve-issue/: SKILL.md
.claude/skills/ship/: SKILL.md
.claude/skills/spec/: SKILL.md
examples/: 01-kebab-case.md  02-truncate-text.md  03-slugify.md  DEMO_GUIDE.md  README.md
src/demoapp/: __init__.py  text_utils.py
tests/: test_text_utils.py
